Upgrade Scarlet to Copper 1.20

--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -32,10 +32,11 @@ bind \ "screenshot jpg 100" // format tga, png also avail, 100 is quality settin
 bind q "impulse 7 8 5 3 4 2" // pull out the best gun available at the moment
 bind e "impulse 6" // grenade launcher
 //bind mouse2 "impulse 8 5 3 4 2" // pull best weap not a rocket
-bind f "impulse 8 3 2" // pull out shotgun
+bind f "impulse 3 2" // pull out shotgun
 bind c "impulse 5 4" // pull out nailgun
-bind z "echo Quicksaving...; wait; save quick"
-bind v "echo Loading...; wait; load quick"
+bind x "impulse 8"
+bind z ""
+bind v ""
 bind p "pause"
 //bind "\" "impulse 104" // for loading waypoint editing
 bind 0 "impulse 10" // for exiting waypoint menu
