--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -30,7 +30,7 @@ set scarlet_gore_multiplier_nails 1
 set scarlet_gore_chance_rockets .8
 set scarlet_gore_multiplier_rockets 12
 set scarlet_gore_chance_cells .6
-set scarlet_gore_multiplier_cells 6
+set scarlet_gore_multiplier_cells 8
 
 // corpses can be gibbed - no worky in Copper :(
 set scarlet_corpses 0
@@ -82,5 +82,13 @@ set scarlet_spr_sng 2
 set scarlet_spd_ng 1996
 set scarlet_spd_sng 1020
 
-// set autoswitch
+// autoswitch
 set scarlet_autoswitch 1
+
+// shards/stims
+set scarlet_shards 0
+set scarlet_shards_count 20
+set scarlet_shards_chance .5
+set scarlet_shards_armor 2
+set scarlet_shards_health 2
+set scarlet_shards_expire 15
