--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -45,8 +45,15 @@ scarlet_gore_multiplier_nails 1
 scarlet_gore_chance_rockets .8
 scarlet_gore_multiplier_rockets 12
 scarlet_gore_chance_cells .6
-scarlet_gore_multiplier_cells 6
+scarlet_gore_multiplier_cells 8
 scarlet_gore_limit_shot 0
 scarlet_gore_limit_drop 1
 
 deathmatch 1
+
+scarlet_shards 1
+scarlet_shards_count 20
+scarlet_shards_chance .4
+scarlet_shards_armor 2
+scarlet_shards_health 2
+scarlet_shards_expire 15
