--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -87,8 +87,12 @@ set scarlet_autoswitch 1
 
 // shards/stims
 set scarlet_shards 0
-set scarlet_shards_count 20
-set scarlet_shards_chance .5
+set scarlet_shards_powerups 1
+set scarlet_shards_multiplier 20 // how many shards drop per killstreak
+set scarlet_shards_chance .4 // change for any shard to not drop
 set scarlet_shards_armor 2
 set scarlet_shards_health 2
 set scarlet_shards_expire 15
+
+// killsteaks
+set scarlet_killstreaks 0
