--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -52,8 +52,11 @@ scarlet_gore_limit_drop 1
 deathmatch 1
 
 scarlet_shards 1
-scarlet_shards_count 20
+scarlet_shards_powerups 1
+scarlet_shards_multiplier 20
 scarlet_shards_chance .4
 scarlet_shards_armor 2
 scarlet_shards_health 2
 scarlet_shards_expire 15
+
+scarlet_killstreaks 1
