--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -85,14 +85,15 @@ set scarlet_spd_sng 1020
 // autoswitch
 set scarlet_autoswitch 1
 
-// shards/stims
+// shard rewards
 set scarlet_shards 0
-set scarlet_shards_powerups 1
-set scarlet_shards_multiplier 20 // how many shards drop per killstreak
-set scarlet_shards_chance .4 // change for any shard to not drop
+set scarlet_shards_multiplier 15 // how many shards drop per killstreak
+set scarlet_shards_chance .333 // chance for any shard to not drop
 set scarlet_shards_armor 2
 set scarlet_shards_health 2
-set scarlet_shards_expire 15
+set scarlet_shards_expire 30
+set scarlet_shards_powerups 1 // include powerups in dice rolls? 1 or 0
+set scarlet_shards_powerups_chance .005 // chance that a shard turns into a powerup
 
 // killsteaks
 set scarlet_killstreaks 0
