--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -11,7 +11,7 @@ scarlet_dmg_cells 150 // default 30
 scarlet_spr_sg 2 // default 4
 scarlet_spr_ssg 12 // default 14
 scarlet_spr_ng 0 // default 0
-scarlet_spr_sng 3 // default 2
+scarlet_spr_sng 4 // default 2
 
 scarlet_spd_ng 1996 // default 1996
 scarlet_spd_sng 1996 // default 1020
@@ -52,11 +52,12 @@ scarlet_gore_limit_drop 1
 deathmatch 1
 
 scarlet_shards 1
-scarlet_shards_powerups 1
-scarlet_shards_multiplier 20
-scarlet_shards_chance .4
+scarlet_shards_multiplier 15
+scarlet_shards_chance .333
 scarlet_shards_armor 2
 scarlet_shards_health 2
-scarlet_shards_expire 15
+scarlet_shards_expire 30
+scarlet_shards_powerups 1
+scarlet_shards_powerups_chance .005
 
 scarlet_killstreaks 1
