--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -19,6 +19,9 @@ set scarlet_nametags 1
 // team combined fraglimit
 set scarlet_teamscores 1
 
+// make weapon drop outside backpack
+set scarlet_weapons 0
+
 // gore settings
 set scarlet_gore 3
 set scarlet_gore_limit_shot 0
