--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -11,10 +11,10 @@ scarlet_dmg_cells 90 // default 30
 scarlet_spr_sg 2 // default 4
 scarlet_spr_ssg 12 // default 14
 scarlet_spr_ng 0 // default 0
-scarlet_spr_sng 4 // default 2
+scarlet_spr_sng 3 // default 2
 
 scarlet_spd_ng 1996 // default 1996
-scarlet_spd_sng 1996 // default 1020
+scarlet_spd_sng 1500 // default 1020
 
 scarlet_dec_shells 1
 scarlet_dec_nails .2
@@ -37,7 +37,7 @@ scarlet_rof_tb 1.579 // default 0
 
 scarlet_autoswitch 0
 
-scarlet_gore 6
+scarlet_gore 9
 scarlet_gore_chance_bullets .3
 scarlet_gore_multiplier_bullets 1
 scarlet_gore_chance_nails .6
@@ -59,5 +59,7 @@ scarlet_shards_health 2
 scarlet_shards_expire 15
 scarlet_shards_powerups 1
 scarlet_shards_powerups_chance .005
+
+scarlet_weapons 1
 
 scarlet_killstreaks 1
