--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -14,7 +14,7 @@ scarlet_spr_ng 0 // default 0
 scarlet_spr_sng 3 // default 2
 
 scarlet_spd_ng 1996 // default 1996
-scarlet_spd_sng 1500 // default 1020
+scarlet_spd_sng 1996 // default 1020
 
 scarlet_dec_shells 1
 scarlet_dec_nails .2
@@ -60,6 +60,7 @@ scarlet_shards_expire 15
 scarlet_shards_powerups 1
 scarlet_shards_powerups_chance .005
 
-scarlet_weapons 1
+scarlet_visible 1
+scarlet_limited 1
 
 scarlet_killstreaks 1
