--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -19,8 +19,14 @@ set scarlet_nametags 1
 // team combined fraglimit
 set scarlet_teamscores 1
 
-// make weapon drop outside backpack
-set scarlet_weapons 0
+// weapon drops outside backpack
+set scarlet_visible 0
+
+// remove shotgun and nailgun
+set scarlet_limited 0
+
+// custom loadouts
+set weapons 0
 
 // gore settings
 set scarlet_gore 3
