--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -1,20 +1,20 @@
 sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
 
 scarlet_dmg_axe 240 // default 24
-scarlet_dmg_bullets 4 // default 4
-scarlet_bullets_in_shell_sg 5 // default 6
-scarlet_bullets_in_shell_ssg 18 // default 14
+scarlet_dmg_bullets 5 // default 4
+scarlet_bullets_in_shell_sg 6 // default 6
+scarlet_bullets_in_shell_ssg 14 // default 14
 scarlet_dmg_nails 3 // default 9
 scarlet_dmg_rockets 120 // default 120
-scarlet_dmg_cells 90 // default 30
+scarlet_dmg_cells 150 // default 30
 
 scarlet_spr_sg 2 // default 4
-scarlet_spr_ssg 12 // default 14
+scarlet_spr_ssg 14 // default 14
 scarlet_spr_ng 0 // default 0
-scarlet_spr_sng 3 // default 2
+scarlet_spr_sng 4 // default 2
 
-scarlet_spd_ng 1996 // default 1996
-scarlet_spd_sng 1996 // default 1020
+scarlet_spd_ng 4000 // default 1996, anything over 2k becomes hitscan
+scarlet_spd_sng 4000 // default 1020, anything over 2k becomes hitscan
 
 scarlet_dec_shells 1
 scarlet_dec_nails .2
@@ -35,10 +35,18 @@ scarlet_rof_rl 1 // default .8
 scarlet_rof_gl .75 // default .6
 scarlet_rof_tb 1.579 // default 0
 
+scarlet_kick_sg 2 // default 2
+scarlet_kick_ssg 5 // default 4
+scarlet_kick_ng 2 // default 2
+scarlet_kick_sng 2 // default 2
+scarlet_kick_gl 6 // default 2
+scarlet_kick_rl 8 // default 2
+scarlet_kick_tb 10 // default 2
+
 scarlet_autoswitch 0
 
 scarlet_gore 9
-scarlet_gore_chance_bullets .3
+scarlet_gore_chance_bullets .6
 scarlet_gore_multiplier_bullets 1
 scarlet_gore_chance_nails .6
 scarlet_gore_multiplier_nails 1
