--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -4,7 +4,7 @@ set scarlet_testing 0
 // turn on footsteps
 set scarlet_footsteps 1
 
-// turn off random bot chat
+// turn on random bot chat
 set scarlet_dialogue 1
 
 // force coop item respawn
@@ -14,7 +14,7 @@ set scarlet_resupply 1
 set scarlet_respawn 5
 
 // show names when aiming
-set scarlet_nametags 1
+set scarlet_nametags 0
 
 // team combined fraglimit
 set scarlet_teamscores 1
@@ -87,9 +87,18 @@ set scarlet_spr_ssg 14
 set scarlet_spr_ng 0
 set scarlet_spr_sng 2
 
+// weapon kick
+set scarlet_kick_sg 2
+set scarlet_kick_ssg 4
+set scarlet_kick_ng 2
+set scarlet_kick_sng 2
+set scarlet_kick_gl 2
+set scarlet_kick_rl 2
+set scarlet_kick_tb 2
+
 // weapon speed
-set scarlet_spd_ng 1996
-set scarlet_spd_sng 1020
+set scarlet_spd_ng 1996 // anything over 2k becomes hitscan
+set scarlet_spd_sng 1020 // anything over 2k becomes hitscan
 
 // autoswitch
 set scarlet_autoswitch 1
