--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -23,18 +23,18 @@ r_shadows 1
 sndspeed 44100
 
 // weapon zoom
-alias zoom "fov 60; bind mouse2 unzoom"
-alias unzoom "fov 90; bind mouse2 zoom"
-bind mouse2 zoom
+//alias zoom "fov 60; bind mouse2 unzoom"
+//alias unzoom "fov 90; bind mouse2 zoom"
+//bind mouse2 zoom
 
 // keys
 bind \ "screenshot jpg 100" // format tga, png also avail, 100 is quality setting
-bind q "impulse 7 8 5 3 4 2" // pull out the best gun available at the moment
-bind e "impulse 6" // grenade launcher
-//bind mouse2 "impulse 8 5 3 4 2" // pull best weap not a rocket
+bind q "impulse 7 8 5 3 4 2" // melee attack
+bind e "impulse 121" // grenade attack
+bind mouse2 "impulse 120" // melee attack
 bind f "impulse 3 2" // pull out shotgun
-bind c "impulse 5 4" // pull out nailgun
-bind x "impulse 8"
+bind c "impulse 5 4" // pull out chaingun
+bind x "impulse 8" // pull out railgun
 bind z ""
 bind v ""
 bind p "pause"
