--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -28,16 +28,16 @@ sndspeed 44100
 //bind mouse2 zoom
 
 // keys
-bind \ "screenshot jpg 100" // format tga, png also avail, 100 is quality setting
-bind q "impulse 7 8 5 3 4 2" // melee attack
-bind e "impulse 121" // grenade attack
-bind mouse2 "impulse 120" // melee attack
-bind f "impulse 3 2" // pull out shotgun
-bind c "impulse 5 4" // pull out chaingun
+bind mouse2 "impulse 121" // grenade attack
+bind q "impulse 7" // pull out rocket
+bind e "impulse 6" // pull out grenade
+bind f "impulse 120" // melee attack
+bind c "impulse 5 4 3" // pull out chaingun
 bind x "impulse 8" // pull out railgun
 bind z ""
 bind v ""
 bind p "pause"
+bind \ "screenshot jpg 100" // format tga, png also avail, 100 is quality setting
 //bind "\" "impulse 104" // for loading waypoint editing
 bind 0 "impulse 10" // for exiting waypoint menu
 bind 9 "impulse 9"
@@ -47,7 +47,7 @@ bind "BACKSPACE" "impulse 102" // remove bot
 saved1 0 // bots don't persist between games
 
 // settings
-teamplay 0
+teamplay 1
 deathmatch 1
 coop 0
 noexit 0
