--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -28,6 +28,10 @@ set scarlet_limited 0
 // custom loadouts
 set weapons 0
 
+// allow melee and grenades
+set scarlet_grenades 0
+set scarlet_grenades_fuse 1
+
 // gore settings
 set scarlet_gore 3
 set scarlet_gore_limit_shot 0
