--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -1,16 +1,16 @@
 sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
 
 scarlet_dmg_axe 240 // default 24
-scarlet_dmg_bullets 5 // default 4
+scarlet_dmg_bullets 4 // default 4
 scarlet_bullets_in_shell_sg 6 // default 6
 scarlet_bullets_in_shell_ssg 15 // default 14
-scarlet_dmg_nails 3 // default 9
+scarlet_dmg_nails 5 // default 9
 scarlet_dmg_rockets 120 // default 120
 scarlet_dmg_cells 90 // default 30
 
 scarlet_spr_sg 2 // default 4
-scarlet_spr_ssg 18 // default 14
-scarlet_spr_ng 0 // default 0
+scarlet_spr_ssg 14 // default 14
+scarlet_spr_ng 2 // default 0
 scarlet_spr_sng 4 // default 2
 
 scarlet_spd_ng 4000 // default 1996, anything over 2k becomes hitscan
@@ -72,3 +72,6 @@ scarlet_visible 1
 scarlet_limited 1
 
 scarlet_killstreaks 1
+
+scarlet_grenades 1
+scarlet_grenades_fuse 1
