--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -104,6 +104,16 @@ set scarlet_kick_tb 2
 set scarlet_spd_ng 1996 // anything over 2k becomes hitscan
 set scarlet_spd_sng 1020 // anything over 2k becomes hitscan
 
+// ammo crates
+set scarlet_shells_big 40
+set scarlet_shells_small 20
+set scarlet_nails_big 50
+set scarlet_nails_small 25
+set scarlet_rockets_big 8
+set scarlet_rockets_small 4
+set scarlet_cells_big 12
+set scarlet_cells_small 6
+
 // autoswitch
 set scarlet_autoswitch 1
 
