--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -17,14 +17,23 @@ scarlet_spd_ng 4000 // default 1996, anything over 2k becomes hitscan
 scarlet_spd_sng 4000 // default 1020, anything over 2k becomes hitscan
 
 scarlet_dec_shells 1
-scarlet_dec_nails .2
-scarlet_dec_rockets 3
-scarlet_dec_cells 4
+scarlet_dec_nails .5
+scarlet_dec_rockets 1
+scarlet_dec_cells 1
 
 scarlet_max_shells 100
-scarlet_max_nails 100 // default 200
-scarlet_max_rockets 100
-scarlet_max_cells 100
+scarlet_max_nails 200 // default 200
+scarlet_max_rockets 50
+scarlet_max_cells 50
+
+scarlet_shells_big 40 // default 40
+scarlet_shells_small 20 // default 20
+scarlet_nails_big 50 // default 50
+scarlet_nails_small 25 // default 25
+scarlet_rockets_big 8 // default 8
+scarlet_rockets_small 4 // default 4
+scarlet_cells_big 12 // default 12
+scarlet_cells_small 6 // default 6
 
 scarlet_rof_axe .365 // default .49
 scarlet_rof_sg .625 // default .5
