--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -1,6 +1,9 @@
 // for testing
 set scarlet_testing 0
 
+// turn off spam
+set scarlet_nospam 0
+
 // turn on footsteps
 set scarlet_footsteps 1
 
@@ -29,8 +32,11 @@ set scarlet_limited 0
 set weapons 0
 
 // allow melee and grenades
+set scarlet_melee 0
 set scarlet_grenades 0
 set scarlet_grenades_fuse 1
+set scarlet_grenades_max 4
+set scarlet_grenades_cooldown 15
 
 // gore settings
 set scarlet_gore 3
