--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -82,5 +82,10 @@ scarlet_limited 1
 
 scarlet_killstreaks 1
 
+scarlet_melee 1
 scarlet_grenades 1
+scarlet_grenades_max 4
 scarlet_grenades_fuse 1
+scarlet_grenades_cooldown 15
+
+scarlet_nospam 1
