--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -1,5 +1,7 @@
 sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
 
+scarlet_nametags 1
+
 scarlet_dmg_axe 240 // default 24
 scarlet_dmg_bullets 4 // default 4
 scarlet_bullets_in_shell_sg 6 // default 6
@@ -85,5 +87,5 @@ scarlet_killstreaks 1
 scarlet_melee 1
 scarlet_grenades 1
 scarlet_grenades_max 4
-scarlet_grenades_fuse 1
+scarlet_grenades_fuse 1.25
 scarlet_grenades_cooldown 8
