--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -12,7 +12,7 @@ scr_conspeed 999999
 scr_conalpha 1
 scr_sbaralpha .999 // glitch the hud into non-transparent
 
-// demos
+// demo
 cl_demoreel 1
 //cl_autodemo 1 // auto record all games
 
@@ -27,12 +27,12 @@ sndspeed 44100
 //alias unzoom "fov 90; bind mouse2 zoom"
 //bind mouse2 zoom
 
-// keys
+// keybinds
 bind mouse2 "impulse 121" // grenade attack
 bind q "impulse 7" // pull out rocket
 bind e "impulse 6" // pull out grenade
 bind f "impulse 120" // melee attack
-bind c "impulse 5 4 3" // pull out chaingun
+bind c "impulse 5 4 3" // pull out chaingun / shotty
 bind x "impulse 8" // pull out railgun
 bind z ""
 bind v ""
@@ -46,7 +46,7 @@ bind "DEL" "impulse 111" // add bot to other team
 bind "BACKSPACE" "impulse 102" // remove bot
 saved1 0 // bots don't persist between games
 
-// settings
+// gameplay
 teamplay 1
 deathmatch 1
 coop 0
@@ -54,6 +54,11 @@ noexit 0
 fraglimit 50
 skill 3
 
-// includes
-exec settings.cfg // my personal game changes
-exec maps.cfg // automated map rotation
+// automatic map rotation
+exec maps.cfg
+
+// scarlet awesomeness
+exec settings/custom.cfg
+
+// personal settings
+exec settings.cfg
