--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -1,6 +1,6 @@
-sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
+// These settings are essentially Q1 defaults, but tweaked 25% slower. -whipowill
 
-scarlet_nametags 1
+sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
 
 scarlet_dmg_axe 240 // default 24
 scarlet_dmg_bullets 4 // default 4
@@ -9,33 +9,6 @@ scarlet_bullets_in_shell_ssg 15 // default 14
 scarlet_dmg_nails 5 // default 9
 scarlet_dmg_rockets 120 // default 120
 scarlet_dmg_cells 90 // default 30
-
-scarlet_spr_sg 2 // default 4
-scarlet_spr_ssg 14 // default 14
-scarlet_spr_ng 2 // default 0
-scarlet_spr_sng 4 // default 2
-
-scarlet_spd_ng 4000 // default 1996, anything over 2k becomes hitscan
-scarlet_spd_sng 4000 // default 1020, anything over 2k becomes hitscan
-
-scarlet_dec_shells 1
-scarlet_dec_nails .5
-scarlet_dec_rockets 1
-scarlet_dec_cells 1
-
-scarlet_max_shells 100
-scarlet_max_nails 200 // default 200
-scarlet_max_rockets 50
-scarlet_max_cells 50
-
-scarlet_shells_big 40 // default 40
-scarlet_shells_small 20 // default 20
-scarlet_nails_big 50 // default 50
-scarlet_nails_small 25 // default 25
-scarlet_rockets_big 6 // default 8
-scarlet_rockets_small 3 // default 4
-scarlet_cells_big 6 // default 12
-scarlet_cells_small 3 // default 6
 
 scarlet_rof_axe .365 // default .49
 scarlet_rof_sg .625 // default .5
@@ -46,6 +19,29 @@ scarlet_rof_rl 1 // default .8
 scarlet_rof_gl .75 // default .6
 scarlet_rof_tb 0.947 // default 0
 
+deathmatch 1
+
+scarlet_nametags 1 // display nametags
+scarlet_autoswitch 0 // enable autoswitch
+scarlet_visible 1 // visible weapons
+scarlet_limited 1 // limited arsenal
+scarlet_killstreaks 1 // display killstreaks
+
+scarlet_melee 1
+scarlet_grenades 1
+scarlet_grenades_max 4
+scarlet_grenades_fuse 1
+scarlet_grenades_cooldown 8
+
+scarlet_shells_big 40 // default 40
+scarlet_shells_small 20 // default 20
+scarlet_nails_big 50 // default 50
+scarlet_nails_small 25 // default 25
+scarlet_rockets_big 4 // default 8
+scarlet_rockets_small 2 // default 4
+scarlet_cells_big 6 // default 12
+scarlet_cells_small 3 // default 6
+
 scarlet_kick_sg 2 // default 2
 scarlet_kick_ssg 5 // default 4
 scarlet_kick_ng 2 // default 2
@@ -54,7 +50,23 @@ scarlet_kick_gl 4 // default 2
 scarlet_kick_rl 6 // default 2
 scarlet_kick_tb 6 // default 2
 
-scarlet_autoswitch 0
+scarlet_spd_ng 4000 // default 1996, anything over 2k becomes hitscan
+scarlet_spd_sng 4000 // default 1020, anything over 2k becomes hitscan
+
+scarlet_dec_shells 1
+scarlet_dec_nails .5
+scarlet_dec_rockets 1
+scarlet_dec_cells 1
+
+scarlet_max_shells 100 // default 100
+scarlet_max_nails 200 // default 200
+scarlet_max_rockets 50 // default 100
+scarlet_max_cells 50 // default 100
+
+scarlet_spr_sg 2 // default 4
+scarlet_spr_ssg 14 // default 14
+scarlet_spr_ng 0 // default 0
+scarlet_spr_sng 4 // default 2
 
 scarlet_gore 9
 scarlet_gore_chance_bullets .6
@@ -68,24 +80,11 @@ scarlet_gore_multiplier_cells 8
 scarlet_gore_limit_shot 0
 scarlet_gore_limit_drop 1
 
-deathmatch 1
-
 scarlet_shards 1
 scarlet_shards_multiplier 15
 scarlet_shards_chance .333
 scarlet_shards_armor 2
 scarlet_shards_health 2
 scarlet_shards_expire 30
-scarlet_shards_powerups 1
+scarlet_shards_powerups 1 // 0=nopowerups, 1=powerups, 2=powerups_nostimmys
 scarlet_shards_powerups_chance .005
-
-scarlet_visible 1
-scarlet_limited 1
-
-scarlet_killstreaks 1
-
-scarlet_melee 1
-scarlet_grenades 1
-scarlet_grenades_max 4
-scarlet_grenades_fuse 1
-scarlet_grenades_cooldown 8
