--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -8,7 +8,7 @@ scarlet_bullets_in_shell_sg 6 // default 6
 scarlet_bullets_in_shell_ssg 15 // default 14
 scarlet_dmg_nails 5 // default 9
 scarlet_dmg_rockets 120 // default 120
-scarlet_dmg_cells 90 // default 30
+scarlet_dmg_cells 60 // default 30
 
 scarlet_rof_axe .365 // default .49
 scarlet_rof_sg .625 // default .5
@@ -17,7 +17,7 @@ scarlet_rof_ng .07125 // default .095
 scarlet_rof_sng .07125 // default .095
 scarlet_rof_rl 1 // default .8
 scarlet_rof_gl .75 // default .6
-scarlet_rof_tb 0.947 // default 0
+scarlet_rof_tb 0 //0.947 // default 0
 
 deathmatch 1
 
@@ -81,7 +81,7 @@ scarlet_gore_limit_shot 0
 scarlet_gore_limit_drop 1
 
 scarlet_shards 1
-scarlet_shards_multiplier 15
+scarlet_shards_multiplier 10
 scarlet_shards_chance .333
 scarlet_shards_armor 2
 scarlet_shards_health 2
