--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -1,14 +1,14 @@
-// These settings are essentially Q1 defaults, but tweaked 25% slower. -whipowill
+// These are essentially Q1 defaults but tweaked 25% slower. -whipowill
 
 sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
 
 scarlet_dmg_axe 240 // default 24
 scarlet_dmg_bullets 4 // default 4
 scarlet_bullets_in_shell_sg 6 // default 6
-scarlet_bullets_in_shell_ssg 15 // default 14
+scarlet_bullets_in_shell_ssg 14 // default 14
 scarlet_dmg_nails 5 // default 9
 scarlet_dmg_rockets 120 // default 120
-scarlet_dmg_cells 60 // default 30
+scarlet_dmg_cells 40 // default 30
 
 scarlet_rof_axe .365 // default .49
 scarlet_rof_sg .625 // default .5
@@ -17,14 +17,14 @@ scarlet_rof_ng .07125 // default .095
 scarlet_rof_sng .07125 // default .095
 scarlet_rof_rl 1 // default .8
 scarlet_rof_gl .75 // default .6
-scarlet_rof_tb 0 //0.947 // default 0
+scarlet_rof_tb 0 // default 0
 
 deathmatch 1
 
 scarlet_nametags 1 // display nametags
 scarlet_autoswitch 0 // enable autoswitch
 scarlet_visible 1 // visible weapons
-scarlet_limited 1 // limited arsenal
+scarlet_limited 0 // limited arsenal
 scarlet_killstreaks 1 // display killstreaks
 
 scarlet_melee 1
@@ -32,15 +32,16 @@ scarlet_grenades 1
 scarlet_grenades_max 4
 scarlet_grenades_fuse 1
 scarlet_grenades_cooldown 8
+scarlet_rof_hg .6 // default .6
 
-scarlet_shells_big 40 // default 40
-scarlet_shells_small 20 // default 20
+scarlet_shells_big 20 // default 40
+scarlet_shells_small 10 // default 20
 scarlet_nails_big 50 // default 50
 scarlet_nails_small 25 // default 25
-scarlet_rockets_big 4 // default 8
-scarlet_rockets_small 2 // default 4
-scarlet_cells_big 6 // default 12
-scarlet_cells_small 3 // default 6
+scarlet_rockets_big 6 // default 8
+scarlet_rockets_small 3 // default 4
+scarlet_cells_big 8 // default 12
+scarlet_cells_small 4 // default 6
 
 scarlet_kick_sg 2 // default 2
 scarlet_kick_ssg 5 // default 4
