--- a/scarlet/settings/halo.cfg
+++ b/scarlet/settings/halo.cfg
@@ -2,21 +2,21 @@
 
 sv_maxspeed 200 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%), 208 (65%), 192 (60%)
 
-scarlet_dmg_axe 240 // default 24
+scarlet_dmg_axe 180 // default 24
 scarlet_dmg_bullets 5 // default 4
-scarlet_bullets_in_shell_sg 8 // default 6
-scarlet_bullets_in_shell_ssg 24 // default 14
-scarlet_dmg_nails 5 // default 9
-scarlet_dmg_rockets 120 // default 120
-scarlet_dmg_cells 100 // default 30
+scarlet_bullets_in_shell_sg 6 // default 6
+scarlet_bullets_in_shell_ssg 18 // default 14
+scarlet_dmg_nails 3 // default 9
+scarlet_dmg_rockets 90 // default 120
+scarlet_dmg_cells 90 // default 30
 
 scarlet_rof_axe 0.3 // default .49
 scarlet_rof_sg .8 // default .5
 scarlet_rof_ssg 1.2 // default .7
-scarlet_rof_ng 0.1 // default .095
+scarlet_rof_ng 0.08 // default .095
 scarlet_rof_sng 0.08 // default .095
+scarlet_rof_gl .8 // default .6
 scarlet_rof_rl 1.2 // default .8
-scarlet_rof_gl 1 // default .6
 scarlet_rof_tb 1.2 // default 0
 
 scarlet_dec_cells 2
