--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -3,18 +3,18 @@
 sv_maxspeed 240 // default 320 (100%), 288 (90%), 256 (80%), 240 (75%), 224 (70%)
 
 scarlet_dmg_axe 240 // default 24
-scarlet_dmg_bullets 4 // default 4
+scarlet_dmg_bullets 5 // default 4
 scarlet_bullets_in_shell_sg 6 // default 6
 scarlet_bullets_in_shell_ssg 14 // default 14
-scarlet_dmg_nails 5 // default 9
+scarlet_dmg_nails 4 // default 9
 scarlet_dmg_rockets 120 // default 120
 scarlet_dmg_cells 40 // default 30
 
 scarlet_rof_axe .365 // default .49
 scarlet_rof_sg .625 // default .5
 scarlet_rof_ssg .875 // default .7
-scarlet_rof_ng .07125 // default .095
-scarlet_rof_sng .07125 // default .095
+scarlet_rof_ng 0.095 // default .095
+scarlet_rof_sng 0.095 // default .095
 scarlet_rof_rl 1 // default .8
 scarlet_rof_gl .75 // default .6
 scarlet_rof_tb 0 // default 0
