--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -5,7 +5,7 @@ scr_showfps 0
 scr_match_hud 0
 crosshair 5
 scr_crosshairscale 1.5
-scr_crosshaircolor 0
+scr_crosshaircolor 0 // 0=white,2=red
 
 // console
 scr_conspeed 999999
@@ -37,8 +37,8 @@ bind x "impulse 8" // pull out railgun
 bind z ""
 bind v ""
 bind p "pause"
-bind \ "screenshot jpg 100" // format tga, png also avail, 100 is quality setting
-//bind "\" "impulse 104" // for loading waypoint editing
+bind \ "screenshot png 100" // format tga, png also avail, 100 is quality setting
+bind / "toggle r_drawviewmodel;viewsize 120;crosshair 0;wait;screenshot png 100;wait;toggle r_drawviewmodel;crosshair 5;viewsize 100;"
 bind 0 "impulse 10" // for exiting waypoint menu
 bind 9 "impulse 9"
 bind "INS" "impulse 110" // add bot
@@ -62,3 +62,6 @@ exec settings/custom.cfg
 
 // personal settings
 exec settings.cfg
+
+// default map
+map nova
