--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -32,19 +32,19 @@ bind mouse2 "impulse 121" // grenade attack
 bind q "impulse 7" // pull out rocket
 bind e "impulse 6" // pull out grenade
 bind f "impulse 120" // melee attack
-bind c "impulse 5 4 3" // pull out chaingun / shotty
+bind c "impulse 5 4" // pull out chaingun / shotty
 bind x "impulse 8" // pull out railgun
-bind z ""
+bind z "impulse 3 2"
 bind v ""
+bind r "" // use hook
 bind p "pause"
 bind \ "screenshot png 100" // format tga, png also avail, 100 is quality setting
 bind / "toggle r_drawviewmodel;viewsize 120;crosshair 0;wait;screenshot png 100;wait;toggle r_drawviewmodel;crosshair 5;viewsize 100;"
-bind 0 "impulse 10" // for exiting waypoint menu
-bind 9 "impulse 9"
+bind 0 "impulse 10" // for frikbot waypoint menu
+bind 9 "impulse 9" // for frikbot waypoint menu
 bind "INS" "impulse 110" // add bot
 bind "DEL" "impulse 111" // add bot to other team
 bind "BACKSPACE" "impulse 102" // remove bot
-saved1 0 // bots don't persist between games
 
 // gameplay
 teamplay 1
@@ -53,6 +53,7 @@ coop 0
 noexit 0
 fraglimit 50
 skill 3
+saved1 0 // bots don't persist between games
 
 // automatic map rotation
 exec maps.cfg
@@ -62,6 +63,3 @@ exec settings/custom.cfg
 
 // personal settings
 exec settings.cfg
-
-// default map
-map nova
