--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -32,9 +32,9 @@ bind mouse2 "impulse 121" // grenade attack
 bind q "impulse 7" // pull out rocket
 bind e "impulse 6" // pull out grenade
 bind f "impulse 120" // melee attack
-bind c "impulse 5 4" // pull out chaingun / shotty
+bind c "impulse 3 2" // pull our shotgun
+bind z "impulse 5 4" // pull out chaingun
 bind x "impulse 8" // pull out railgun
-bind z "impulse 3 2"
 bind v ""
 bind r "" // use hook
 bind p "pause"
