--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -46,12 +46,15 @@ set scarlet_autoswitch 1
 // killsteaks
 set scarlet_killstreaks 0
 
-// allow melee and grenades
+// allow melee
 set scarlet_melee 0
+
+// allow hand grenades
 set scarlet_grenades 0
+set scarlet_grenades_min 2
 set scarlet_grenades_max 4
 set scarlet_grenades_fuse 1
-set scarlet_grenades_cooldown 10
+set scarlet_grenades_cooldown 1 // 0=backpacks only, >0=game will restock after time
 set scarlet_grenades_chance .33
 set scarlet_rof_hg .6
 
