--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -28,9 +28,10 @@ scarlet_killstreaks 1 // display killstreaks
 
 scarlet_melee 1
 scarlet_grenades 1
+scarlet_grenades_min 2
 scarlet_grenades_max 4
 scarlet_grenades_fuse 1
-scarlet_grenades_cooldown 8
+scarlet_grenades_cooldown 0 // 0=grenades only come from backpacks, >0= grenades reset after # seconds
 scarlet_grenades_chance 0.5
 scarlet_rof_hg .6 // default .6
 
