--- a/scarlet/maps.cfg
+++ b/scarlet/maps.cfg
@@ -16,5 +16,13 @@ alias map12 "changelevel skull"
 alias map13 "changelevel strafin6"
 alias map14 "changelevel zxcdm1"
 
+// B Tier
+alias map15 "changelevel chesdm1"
+alias map16 "changelevel imp1dm6"
+alias map17 "changelevel ztndm1"
+alias map18 "changelevel ztndm2"
+alias map19 "changelevel ztndm3"
+alias map20 "changelevel ztndm4"
+
 // Trigger
-samelevel 14 // make # of maps
+samelevel 20 // make # of maps
