--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -55,6 +55,7 @@ set scarlet_grenades_min 2
 set scarlet_grenades_max 4
 set scarlet_grenades_fuse 1.5
 set scarlet_grenades_chance .5
+set scarlet_grenades_maxpack 2
 set scarlet_grenades_cooldown 8
 set scarlet_grenades_restock 0
 set scarlet_rof_hg .6
