--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -29,7 +29,7 @@ sndspeed 44100
 
 // keybinds
 bind mouse2 "impulse 121" // grenade attack
-bind q "impulse 7" // pull out rocket
+bind q "impulse 7 4 5" // pull out rocket
 bind e "impulse 6" // pull out grenade
 bind f "impulse 120" // melee attack
 bind c "impulse 3 2" // pull our shotgun
