--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -48,6 +48,7 @@ set scarlet_killstreaks 0
 
 // allow melee
 set scarlet_melee 0
+set scarlet_melee_spam 3
 
 // allow hand grenades
 set scarlet_grenades 0
