--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -29,8 +29,8 @@ exec settings/quake2.cfg
 // -----------------------------
 // Ultimately this is the biggest choice, how fast do you move?
 // My view is Doom/Quake was way way way too fast, 320 is default but 200-240 is the strike zone.
-// 240 is fast (pretty fast, can still make all trick jumps, no melee)
-// 220 is medium (probably best option, can make some trick jumps, some melee)
+// 240 is fast (pretty fast, can still make most trick jumps, no melee)
+// 220 is medium (probably best option, can make some trick jumps, more melee)
 // 200 is slow (Halo-style, moving like a snail, melee all the time)
 // FPS games from the 90s were too fast paced, slowing it down is funner.
 // I want you to move slow enough to make peaking corners, slinging axes, and tossing grenades viable options.
