--- a/scarlet/settings/init.cfg
+++ b/scarlet/settings/init.cfg
@@ -5,6 +5,8 @@ scarlet_limited 0 // limited arsenal
 scarlet_killstreaks 1 // display killstreaks
 
 scarlet_melee 1
+scarlet_melee_spam 2
+
 scarlet_grenades 1
 scarlet_grenades_min 2
 scarlet_grenades_max 4
@@ -13,7 +15,7 @@ scarlet_grenades_chance 0.5
 scarlet_grenades_cooldown 8
 scarlet_grenades_maxpack 2
 scarlet_grenades_restock 0
-scarlet_rof_hg 1 // default .6
+scarlet_rof_hg 1.2 // default .6
 
 scarlet_shells_big 20 // default 40
 scarlet_shells_small 10 // default 20
