--- a/scarlet/settings/custom.cfg
+++ b/scarlet/settings/custom.cfg
@@ -1,8 +1,9 @@
 // SUMMARY OF FILES
+// -----------------
 // - Custom.cfg - this file
 // - Init.cfg - init Scarlet settings
 // - Quake1.cfg - mimics Q1
-// - Quake2.cfg - mimics Q2 <-- DEFAULT AT END OF THIS FILE
+// - Quake2.cfg - mimics Q2 <-- DEFAULT
 // - Infinite.cfg - allows infinite ammo
 // - Vanilla.cfg - resets to default, no gameplay changes
 
