--- a/scarlet/settings/init.cfg
+++ b/scarlet/settings/init.cfg
@@ -55,7 +55,7 @@ scarlet_spr_sng 4 // default 2
 scarlet_gore 9
 scarlet_gore_chance_bullets .6
 scarlet_gore_multiplier_bullets 1
-scarlet_gore_chance_nails .3
+scarlet_gore_chance_nails .2
 scarlet_gore_multiplier_nails 1
 scarlet_gore_chance_rockets .8
 scarlet_gore_multiplier_rockets 12
@@ -65,15 +65,17 @@ scarlet_gore_limit_shot 0
 scarlet_gore_limit_drop 1
 
 scarlet_shards 1
-scarlet_shards_multiplier 10
-scarlet_shards_chance .333
+scarlet_shards_multiplier 20
+scarlet_shards_chance .25
 scarlet_shards_armor 0
-scarlet_shards_health 2
+scarlet_shards_health 1
 scarlet_shards_expire 30
 scarlet_shards_powerups 1 // 0=nopowerups, 1=powerups, 2=powerups/nostimmys
 scarlet_shards_powerups_chance .005
 
 scarlet_recharge 1
 scarlet_recharge_cooldown 5
-scarlet_recharge_health 0
+scarlet_recharge_health 1
 scarlet_recharge_armor 10
+
+scarlet_nospam 1
