--- a/scarlet/maps.cfg
+++ b/scarlet/maps.cfg
@@ -8,7 +8,7 @@ alias map6 "changelevel ultrav"
 
 // A Tier
 alias map7 "changelevel doomed"
-alias map8 "changelevel dm6_fp"
+alias map8 "changelevel dm6"
 alias map9 "changelevel e1m2"
 alias map10 "changelevel matdm2"
 alias map11 "changelevel q1edge"
