--- a/scarlet/settings/quake1.cfg
+++ b/scarlet/settings/quake1.cfg
@@ -1,6 +1,4 @@
 // =================================================
-// essentially Q1 defaults but everything is 25% slower. -whipowill
-
 scarlet_dmg_axe 240 // default 24
 scarlet_dmg_bullets 5 // default 4
 scarlet_bullets_in_shell_sg 6 // default 6
@@ -9,13 +7,13 @@ scarlet_dmg_nails 4 // default 9
 scarlet_dmg_rockets 120 // default 120
 scarlet_dmg_cells 40 // default 30
 
-scarlet_rof_axe .365 // default .49
-scarlet_rof_sg .625 // default .5
-scarlet_rof_ssg .875 // default .7
+scarlet_rof_axe 0.365 // default .49
+scarlet_rof_sg 0.625 // default .5
+scarlet_rof_ssg 0.875 // default .7
 scarlet_rof_ng 0.08 // default .095
 scarlet_rof_sng 0.08 // default .095
 scarlet_rof_rl 1 // default .8
-scarlet_rof_gl .75 // default .6
+scarlet_rof_gl 0.75 // default .6
 scarlet_rof_tb 0 // default 0
 // =================================================
 
