--- a/scarlet/settings/quake2.cfg
+++ b/scarlet/settings/quake2.cfg
@@ -1,6 +1,4 @@
 // =================================================
-// essentially Quake2 settings w/ slower movement speed. -whipowill
-
 scarlet_dmg_axe 240 // default 24
 scarlet_dmg_bullets 5 // default 4
 scarlet_bullets_in_shell_sg 6 // default 6
@@ -10,11 +8,11 @@ scarlet_dmg_rockets 120 // default 120
 scarlet_dmg_cells 90 // default 30
 
 scarlet_rof_axe 0.4 // default .49
-scarlet_rof_sg .6 // default .5
+scarlet_rof_sg 0.6 // default .5
 scarlet_rof_ssg 1.2 // default .7
-scarlet_rof_ng 0.1 // default .095
+scarlet_rof_ng 0.08 // default .095
 scarlet_rof_sng 0.08 // default .095
-scarlet_rof_gl .8 // default .6
+scarlet_rof_gl 0.8 // default .6
 scarlet_rof_rl 1 // default .8
 scarlet_rof_tb 1.4 // default 0
 
