--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -6,6 +6,7 @@ scr_match_hud 0
 crosshair 5
 scr_crosshairscale 1.5
 scr_crosshaircolor 0 // 0=white,2=red
+cl_say 1
 
 // console
 scr_conspeed 999999
