--- a/scarlet/settings/init.cfg
+++ b/scarlet/settings/init.cfg
@@ -6,8 +6,8 @@ scarlet_killstreaks 1 // display killstreaks
 
 scarlet_melee 1
 scarlet_melee_spam 2
-scarlet_melee_dst_lunge 300
-scarlet_melee_spd_lunge 600
+scarlet_melee_dst_lunge 0 // disabled for now due to bug
+scarlet_melee_spd_lunge 0 // disabled for now due to bug
 
 scarlet_grenades 1
 scarlet_grenades_min 2
