--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -49,8 +49,8 @@ set scarlet_killstreaks 0
 // allow melee
 set scarlet_melee 0
 set scarlet_melee_spam 2
-set scarlet_melee_dst_lunge 300
-set scarlet_melee_spd_lunge 600
+set scarlet_melee_dst_lunge 0 // disabled for now due to bug
+set scarlet_melee_spd_lunge 0 // disabled for now due to bug
 
 // allow hand grenades
 set scarlet_grenades 0
