--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -15,7 +15,7 @@ scr_sbaralpha .999 // glitch the hud into non-transparent
 
 // demo
 cl_demoreel 1
-//cl_autodemo 1 // auto record all games
+cl_autodemo 0 // auto record all games
 
 // video
 r_shadows 1
