--- a/scarlet/maps.cfg
+++ b/scarlet/maps.cfg
@@ -10,7 +10,7 @@ alias map6 "changelevel ultrav"
 alias map7 "changelevel doomed"
 alias map8 "changelevel dm6"
 alias map9 "changelevel matdm2"
-alias map10 "changelevel q1edge"
+alias map10 "changelevel skull" // used to be q1edge, but the bots have issues on that board
 alias map11 "changelevel skull"
 alias map12 "changelevel strafin6"
 alias map13 "changelevel zxcdm1"
