--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -29,10 +29,10 @@ sndspeed 44100
 //bind mouse2 zoom
 
 // keybinds
-bind mouse2 "impulse 121" // grenade attack
+bind mouse2 "impulse 120" // melee attack
 bind q "impulse 7 5 3 4 6" // pull out rocket
 bind e "impulse 6" // pull out grenade
-bind f "impulse 120" // melee attack
+bind f "impulse 121" // grenade attack
 bind c "impulse 3 2" // pull our shotgun
 bind z "impulse 5 4" // pull out chaingun
 bind x "impulse 8" // pull out railgun
