--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -49,14 +49,15 @@ set scarlet_killstreaks 0
 // allow melee
 set scarlet_melee 0
 set scarlet_melee_spam 2
-set scarlet_melee_dst_lunge 0 // disabled for now due to bug
-set scarlet_melee_spd_lunge 0 // disabled for now due to bug
+set scarlet_melee_dst_lunge 300
+set scarlet_melee_spd_lunge 600
 
 // allow hand grenades
 set scarlet_grenades 0
 set scarlet_grenades_min 2
 set scarlet_grenades_max 4
 set scarlet_grenades_fuse 1.5
+set scarlet_grenades_touch 0
 set scarlet_grenades_chance .5
 set scarlet_grenades_maxpack 2
 set scarlet_grenades_cooldown 8
