--- a/scarlet/settings/init.cfg
+++ b/scarlet/settings/init.cfg
@@ -13,6 +13,7 @@ scarlet_grenades 1
 scarlet_grenades_min 2
 scarlet_grenades_max 4
 scarlet_grenades_fuse 1.5
+scarlet_grenades_touch 0
 scarlet_grenades_chance 0.5
 scarlet_grenades_cooldown 8
 scarlet_grenades_maxpack 2
@@ -57,7 +58,7 @@ scarlet_spr_sng 4 // default 2
 scarlet_gore 9
 scarlet_gore_chance_bullets .6
 scarlet_gore_multiplier_bullets 1
-scarlet_gore_chance_nails .2
+scarlet_gore_chance_nails .05
 scarlet_gore_multiplier_nails 1
 scarlet_gore_chance_rockets .8
 scarlet_gore_multiplier_rockets 12
@@ -81,3 +82,5 @@ scarlet_recharge_health 1
 scarlet_recharge_armor 10
 
 scarlet_nospam 0
+
+deathmatch 1
