--- a/scarlet/settings/v3.cfg
+++ b/scarlet/settings/v3.cfg
@@ -4,7 +4,9 @@ scarlet_bullets_in_shell_sg 6 // default 6
 scarlet_bullets_in_shell_ssg 24 // default 14
 scarlet_dmg_nails 3 // default 9
 scarlet_dmg_rockets 120 // default 120
-scarlet_dmg_cells 160 // default 30
+scarlet_dmg_cells 100 // default 30
+
+scarlet_grenades_fuse 1
 
 scarlet_rof_axe 0.3 // default .49
 scarlet_rof_sg 0.6 // default .5
