--- a/scarlet/settings/init.cfg
+++ b/scarlet/settings/init.cfg
@@ -6,8 +6,9 @@ scarlet_killstreaks 1 // display killstreaks
 
 scarlet_melee 1
 scarlet_melee_spam 2
-scarlet_melee_dst_lunge 250 // this can be buggy, use 0 for off
-scarlet_melee_spd_lunge 250 // this can be buggy, use 0 for off
+scarlet_melee_lunge_dst 250
+scarlet_melee_lunge_hor 250 // this can be buggy, use 0 for off
+scarlet_melee_lunge_ver .25 // this can be buggy, use 0 for off
 
 scarlet_grenades 1
 scarlet_grenades_min 2
@@ -58,7 +59,7 @@ scarlet_spr_sng 4 // default 2
 scarlet_gore 9
 scarlet_gore_chance_bullets .6
 scarlet_gore_multiplier_bullets 1
-scarlet_gore_chance_nails .01
+scarlet_gore_chance_nails .3
 scarlet_gore_multiplier_nails 1
 scarlet_gore_chance_rockets .8
 scarlet_gore_multiplier_rockets 12
@@ -78,10 +79,12 @@ scarlet_shards_powerups_chance .005
 
 scarlet_recharge 1
 scarlet_recharge_cooldown 5
-scarlet_recharge_health 1
-scarlet_recharge_armor 10
+scarlet_recharge_health 2
+scarlet_recharge_armor 20
 
-scarlet_nospam 1
+scarlet_chat_backpacks 0
+scarlet_chat_deaths 2 // 2 uses alternate death notices
+scarlet_chat_killstreaks 1
 
 scarlet_priority_quad 90
 scarlet_priority_pent 100
