--- a/scarlet/maps.cfg
+++ b/scarlet/maps.cfg
@@ -8,12 +8,12 @@ alias map6 "changelevel ultrav"
 
 // A Tier
 alias map7 "changelevel doomed"
-alias map8 "changelevel dm6"
+alias map8 "changelevel dm6_fp"
 alias map9 "changelevel matdm2"
-alias map10 "changelevel dm3_fp" // used to be q1edge, but the bots have issues on that board
-alias map11 "changelevel skull"
-alias map12 "changelevel strafin6"
-alias map13 "changelevel zxcdm1"
+alias map10 "changelevel skull"
+alias map11 "changelevel strafin6"
+alias map12 "changelevel zxcdm1"
+alias map13 "changelevel e1m2"
 
 // B Tier
 alias map14 "changelevel chesdm1"
@@ -21,6 +21,8 @@ alias map15 "changelevel imp1dm6"
 alias map16 "changelevel ztndm1"
 alias map17 "changelevel ztndm2"
 alias map18 "changelevel ztndm3"
+alias map19 "changelevel e1m7"
+alias map20 "changelevel dm3_fp"
 
 // Trigger
-samelevel 18 // make # of maps
+samelevel 20 // make # of maps
