--- a/scarlet/settings/v4.cfg
+++ b/scarlet/settings/v4.cfg
@@ -6,8 +6,6 @@ scarlet_dmg_nails 3 // default 9
 scarlet_dmg_rockets 120 // default 120
 scarlet_dmg_cells 100 // default 30
 
-scarlet_grenades_fuse 1
-
 scarlet_rof_axe 0.3 // default .49
 scarlet_rof_sg 0.6 // default .5
 scarlet_rof_ssg 1.2 // default .7
@@ -26,12 +24,14 @@ scarlet_spr_sng 6 // default 2
 scarlet_dec_shells 1
 scarlet_dec_nails 1
 scarlet_dec_rockets 1
-scarlet_dec_cells 3
+scarlet_dec_cells 1
 
 scarlet_max_shells 24 // default 100
 scarlet_max_nails 480 // default 200
 scarlet_max_rockets 12 // default 100
-scarlet_max_cells 36 // default 100
+scarlet_max_cells 6 // default 100
+
+// in theory you want big ammo to be 1/3 of full
 
 scarlet_shells_big 8 // default 40
 scarlet_shells_small 4 // default 20
@@ -39,5 +39,5 @@ scarlet_nails_big 160 // default 50
 scarlet_nails_small 80 // default 25
 scarlet_rockets_big 4 // default 8
 scarlet_rockets_small 2 // default 4
-scarlet_cells_big 12 // default 12
-scarlet_cells_small 6 // default 6
+scarlet_cells_big 2 // default 12
+scarlet_cells_small 1 // default 6
