--- a/scarlet/maps.cfg
+++ b/scarlet/maps.cfg
@@ -21,8 +21,8 @@ alias map15 "changelevel imp1dm6"
 alias map16 "changelevel ztndm1"
 alias map17 "changelevel ztndm2"
 alias map18 "changelevel ztndm3"
-alias map19 "changelevel e1m7"
-alias map20 "changelevel dm3_fp"
+//alias map19 "changelevel e1m7"
+//alias map20 "changelevel dm3_fp"
 
 // Trigger
-samelevel 20 // make # of maps
+samelevel 18 // make # of maps
