--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -1,4 +1,38 @@
-// personal settings
+// intro
+cl_demoreel 1
+
+// video
+r_shadows 1
+
+// sound
+sndspeed 44100
+
+// console
+scr_conspeed 999999
+scr_conalpha 1
+scr_sbaralpha .999 // glitch the hud into non-transparent
+
+// hud
+scr_ping 0
+scr_clock 0
+scr_showfps 0
+scr_match_hud 0
+crosshair 5
+scr_crosshairscale 1
+scr_crosshaircolor 0 // 0=white,2=red
+cl_say 1
+
+// gameplay
+teamplay 1
+deathmatch 1
+coop 0
+noexit 0
+fraglimit 50
+skill 3
+saved1 0 // bots don't persist between games
+sv_cheats 1
+
+// personal settings (excluded from repo)
 exec settings.cfg
 
 // automatic map rotation
@@ -6,3 +40,8 @@ exec maps.cfg
 
 // scarlet awesomeness
 exec settings/custom.cfg
+
+// bot keybinds
+bind "INS" "impulse 110" // add bot
+bind "DEL" "impulse 111" // add bot to other team
+bind "BACKSPACE" "impulse 102" // remove bot
