--- a/scarlet/autoexec.cfg
+++ b/scarlet/autoexec.cfg
@@ -41,6 +41,10 @@ exec maps.cfg
 // scarlet awesomeness
 exec settings/custom.cfg
 
+// new attack modes
+bind mouse2 "impulse 120" // melee attack
+bind f "impulse 121" // grenade attack
+
 // bot keybinds
 bind "INS" "impulse 110" // add bot
 bind "DEL" "impulse 111" // add bot to other team
