--- a/scarlet/default.cfg
+++ b/scarlet/default.cfg
@@ -1,6 +1,9 @@
 // for testing
 set scarlet_testing 0
 
+// off allows bots to pick unique tops in teamplay
+set scarlet_bots_team_jersey 1
+
 // turn off spam
 set scarlet_chat_backpacks 1
 set scarlet_chat_deaths 1 // 2 uses alternate death notices
